Project Links added

--- a/projects.html
+++ b/projects.html
@@ -22,18 +22,18 @@
     </nav>
 
     <main>
-      <section>
-        <h1 class="c-section__title">List of my Projects</h1>
-        <ul class="c-section__list">
-          <li>Bikes for Refugees 🔗</li>
-          <li>Wireframe to Web Code 🔗</li>
-          <li>Store Page 🔗</li>
-          <li>Cakes Co 🔗</li>
-          <li>Multipage Clone 🔗</li>
-          <li>Module Project 🔗</li>
-        </ul>
-      </section>
-    </main>
+   <section>
+  <h1 class="c-section__title">List of my Projects</h1>
+  <ul class="c-section__list">
+    <li><a href="https://deploy-preview-469--cyf-bfr.netlify.app/" target="_blank">Bikes for Refugees</a></li>
+    <li><a href="https://deploy-preview-108--cyf-module-html-css.netlify.app/wireframe/" target="_blank">Discovering Git: Wireframe to Web Code</a></li>
+    <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/level-2/store" target="_blank">Store Page</a></li>
+    <li><a href="https://deploy-preview-130--cyf-module-html-css.netlify.app/cakes-co/" target="_blank">Discovering Git: Cakes Co</a></li>
+    <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/" target="_blank">Karma Project</a></li>
+  </ul>
+</section>
+
+
 
     <footer class="c-site-footer">
       <p class="c-site-footer__text">&copy; 2023 Fathi. All rights reserved.</p>
