--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Homepage</title>
-    <link rel="stylesheet" href="/Portfolio/style.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header class="c-site-header">
@@ -14,11 +14,9 @@
 
     <nav aria-label="Main Site Links" class="c-site-nav">
       <a href="index.html" class="c-site-nav__link">Home</a>
-      <a href="/Portfolio/about.html" class="c-site-nav__link">About</a>
-      <a href="/Portfolio/projects.html" class="c-site-nav__link"
-        >My projects</a
-      >
-      <a href="/Portfolio/contact.html" class="c-site-nav__link">Contact</a>
+      <a href="/about.html" class="c-site-nav__link">About</a>
+      <a href="/projects.html" class="c-site-nav__link">My projects</a>
+      <a href="/contact.html" class="c-site-nav__link">Contact</a>
     </nav>
 
     <main>
