--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Personal Homepage</title>
     <link rel="stylesheet" href="style.css" />
-    <link rel="about" href="/Portfolio/about.html" />
-    <link rel="contact" href="/Portfolio/contact.html" />
-    <link rel="about" href="/Portfolio/projects.html" />
+    <link rel="about" href="/about.html" />
+    <link rel="contact" href="/contact.html" />
+    <link rel="about" href="/projects.html" />
   </head>
   <body>
     <header class="c-site-header">
@@ -17,11 +17,9 @@
 
     <nav aria-label="Main Site Links" class="c-site-nav">
       <a href="index.html" class="c-site-nav__link">Home</a>
-      <a href="/Portfolio/about.html" class="c-site-nav__link">About</a>
-      <a href="/Portfolio/projects.html" class="c-site-nav__link"
-        >My projects</a
-      >
-      <a href="/Portfolio/contact.html" class="c-site-nav__link">Contact</a>
+      <a href="/about.html" class="c-site-nav__link">About</a>
+      <a href="/projects.html" class="c-site-nav__link">My projects</a>
+      <a href="/contact.html" class="c-site-nav__link">Contact</a>
     </nav>
 
     <main>
