new project style

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     <main tabindex="0">
       <section id="about">
         <h1>Hello !</h1>
-        <p>My name is Zahra</p>
-        <p>and I am a Web Developer</p>
+        <h3>My name is Zahra</h3>
+        <h3>and I am a Web Developer</h3>
           <div class="social-links">
           <a href="https://www.facebook.com/zahra.khademi.31/">
           <i class="fab fa-facebook-f"></i></a>
@@ -66,6 +66,7 @@
       <section id="projects">
         <h2>My Projects</h2>
         <div class="portfolio-container">
+        <div class="portfolio-row">
       <article class='card'>
         <a href="https://zahra-personal-page.netlify.app/"><img src='images/PW.png' alt="page"></a>
         <div class="text-container">
@@ -86,7 +87,9 @@
           <a href="https://deploy-preview-82--cyf-module-html-css.netlify.app/wireframe">Wireframe</a>
         </div>
       </article>
+        </div>
 
+      <div class="portfolio-row">
       <article class='card'>
         <a href="https://zahra-k-b-form-controls.netlify.app/form-controls/"><img src='images/form.png' alt="app"></a>
         <div class="text-container">
@@ -107,9 +110,7 @@
           <a href="https://deploy-preview-635--cyf-module-project-html-css.netlify.app/store/">Store</a>
         </div>
       </article>
-
-
-
+        </div>
       </section>
 
       <section id="contact">
@@ -139,15 +140,13 @@
           </form>
         </div>
       </div>
-      </div>
-    
-        
-      </section>
+    </div>
+  </section>
     </main>
-    <footer>
+      <footer>
         <div class="footer">
           <p>&copy; 2023 Zahra.k.b. All Rights Reserved.</p>
         </div>
-    </footer>
+      </footer>
   </body>
 </html>
