--- a/Elmira-Zangeneh-portfolio/index.html
+++ b/Elmira-Zangeneh-portfolio/index.html
@@ -39,8 +39,8 @@
   <body>
     <header>
       <div class="header">
-        <img src="img/Elmira_logo.png" alt="">
-        <h1>Welcome To My Portfolio </h1>
+        <img src="img/Elmira_logo.png" alt="" />
+        <h1>Welcome To My Portfolio</h1>
       </div>
       <nav>
         <ul>
@@ -57,49 +57,80 @@
             <h2>About Me</h2>
           </header>
           <p>
-            I am Elmira Zangeneh
-            I'm a new developer
-            This is my simple web page !
-            It's so wonderful that I can learn new things such as coding by computer.
-            This Is Really Challenging. Ambition is the path to success.
-            Ambition is the path to success. Persistence is the vehicle you arrive in...
-            I'm really interested in learning web developing.
-            nd I try to do my best in designing and coding the websites.
-            It's great to see how I can build websites and improve in this field.
-            I hope I will be a great programmer oneday.
+            I am Elmira Zangeneh I'm a new developer This is my simple web page
+            ! It's so wonderful that I can learn new things such as coding by
+            computer. This Is Really Challenging. Ambition is the path to
+            success. Ambition is the path to success. Persistence is the vehicle
+            you arrive in... I'm really interested in learning web developing.
+            nd I try to do my best in designing and coding the websites. It's
+            great to see how I can build websites and improve in this field. I
+            hope I will be a great programmer oneday.
           </p>
         </div>
         <div>
-          <img id="info_img" src="img/vector-female-developer.jpg" alt="">
+          <img id="info_img" src="img/vector-female-developer.jpg" alt="" />
         </div>
       </section>
       <section id="projects">
         <header><h2>Projects Showcase</h2></header>
-        </section>
-        <section class="project">
-          <h3>My Project</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, numquam.</p>
-          <div class="project_container">
+      </section>
+      <section class="project">
+        <h3>My Project</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus, numquam.
+        </p>
+        <div class="project_container">
           <div class="project_item">
-            <a href="#"><img src="img/female-developer-vector (1).jpg" alt=""></a>
+            <a href="#"
+              ><img src="img/female-developer-vector (1).jpg" alt=""
+            /></a>
             <h4>Healthy Page</h4>
           </div>
           <div class="project_item">
-            <a href="#"><img src="img/woman-programmer-working-on-a-new-project-free-vector.jpg" alt=""></a>
-            <h4>Healthy Page</h4>
+            <a href="#"
+              ><img
+                src="img/woman-programmer-working-on-a-new-project-free-vector.jpg"
+                alt=""
+            /></a>
+            <h4>HomeTown</h4>
           </div>
           <div class="project_item">
-            <a href="#"><img src="img/istockphoto-1306190794-612x612.jpg" alt=""></a>
-            <h4>Healthy Page</h4>
+            <a href="#"
+              ><img src="img/istockphoto-1306190794-612x612.jpg" alt=""
+            /></a>
+            <h4>WireFrame</h4>
           </div>
         </div>
       </section>
-      <br><br><br>
+      <br /><br /><br /><br /><br /><br />
+      <section class="project">
+        <div class="project_container">
+          <div class="project_item">
+            <a href="#"
+              ><img src="img/female-developer-vector-illustration.jpg" alt=""
+            /></a>
+            <h4>Healthy Page</h4>
+          </div>
+          <div class="project_item">
+            <a href="#"
+              ><img
+                src="img/female-developer-using-laptop-character-2H2KPH4.jpg"
+                alt=""
+            /></a>
+            <h4>HomeTown</h4>
+          </div>
+          <div class="project_item">
+            <a href="#"><img src="img/download (1).jpg" alt="" /></a>
+            <h4>WireFrame</h4>
+          </div>
+        </div>
+      </section>
+
+      <br /><br /><br />
       <section id="contact">
         <header><h2>Contact me</h2></header>
-        <p>
-          You Can Contact Me Through Blow Icons...
-        </p>
+        <p>You Can Contact Me Through Blow Icons...</p>
       </section>
     </main>
     <footer>
