--- a/index.html
+++ b/index.html
@@ -20,16 +20,10 @@
         }
       }
     </style>
-    <link
-      rel="stylesheet"
-      href="style.css"
-      media="print"
-      onload="this.media='all'" />
+    <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300&display=swap"
-      rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@100;300&display=swap" rel="stylesheet" />
   </head>
   <body>
     <header>
@@ -47,25 +41,20 @@
         <section id="about">
           <header><h2>About Me</h2></header>
           <p>
-            I'm Rabia, a Manchester resident since 2017 and a proud mother of
-            two. My background is rooted in architecture, where I developed a
+            I'm Rabia, a Manchester resident since 2017 and a proud mother of two. My background is rooted in architecture, where I developed a
             passion for design and precision.
           </p>
           <p>
-            After years in the field, I've embarked on a new journey as a
-            full-stack developer student at CODE YOUR FUTURE. I'm immersed in
-            the world of HTML, CSS, JavaScript, React, Node.js, and more.
+            After years in the field, I've embarked on a new journey as a full-stack developer student at CODE YOUR FUTURE. I'm immersed in the world
+            of HTML, CSS, JavaScript, React, Node.js, and more.
           </p>
           <p>
-            My primary drive is to build a stellar portfolio and secure a
-            meaningful role in the tech industry. Each line of code I write
-            fuels my ambition to contribute to innovative solutions. I believe
-            in the endless possibilities that the tech landscape offers and am
-            committed to continuous growth and learning.
+            My primary drive is to build a stellar portfolio and secure a meaningful role in the tech industry. Each line of code I write fuels my
+            ambition to contribute to innovative solutions. I believe in the endless possibilities that the tech landscape offers and am committed to
+            continuous growth and learning.
           </p>
           <p>
-            My family's support and the CODE YOUR FUTURE community inspire me on
-            this exciting path. I'm eager to explore how I can make a lasting
+            My family's support and the Code Your Future community inspire me on this exciting path. I'm eager to explore how I can make a lasting
             impact on the ever-evolving tech world.
           </p>
         </section>
@@ -73,13 +62,8 @@
           <header><h2>Projects Showcase</h2></header>
           <div class="project-list">
             <!-- Personal Homepage page  -->
-            <a
-              href=" https://cyf-personal-homepage-diceroll-commnt.netlify.app/"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
-                viewBox="0 0 24 24">
+            <a href=" https://cyf-personal-homepage-diceroll-commnt.netlify.app/"
+              ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
                   d="M20.021 0c-1.646 0-2.98 1.335-2.98 2.98 0 .652.21 1.256.566 1.746l-3.275 3.274h2.144l2.309-2.309c.376.173.795.269 1.236.269 1.645 0 2.979-1.334 2.979-2.98s-1.334-2.98-2.979-2.98zm0 2.338c-.513 0-.929-.292-.929-.653s.416-.653.929-.653c.512 0 .928.292.928.653s-.417.653-.928.653zm-14.021 10.662h10v1h-10v-1zm10-2h-10v-1h10v1zm-3-4v1h-7v-1h7zm8 .861v6.524c0 2.392-6.648 9.615-9.811 9.615h-10.189v-24h15.055c-.439.584-.767 1.257-.915 2h-12.14v20h7.362c4.156 0 2.638-6 2.638-6s6 1.65 6-2.457v-5.746c.668.215 1.33.198 2 .064z"
                   fill="currentColor" />
@@ -88,13 +72,8 @@
             </a>
 
             <!-- Wireframe to Web Code  -->
-            <a
-              href=" https://deploy-preview-111--cyf-module-html-css.netlify.app/wireframe/"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
-                viewBox="0 0 24 24">
+            <a href=" https://deploy-preview-111--cyf-module-html-css.netlify.app/wireframe/"
+              ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
                   d="M20.021 0c-1.646 0-2.98 1.335-2.98 2.98 0 .652.21 1.256.566 1.746l-3.275 3.274h2.144l2.309-2.309c.376.173.795.269 1.236.269 1.645 0 2.979-1.334 2.979-2.98s-1.334-2.98-2.979-2.98zm0 2.338c-.513 0-.929-.292-.929-.653s.416-.653.929-.653c.512 0 .928.292.928.653s-.417.653-.928.653zm-14.021 10.662h10v1h-10v-1zm10-2h-10v-1h10v1zm-3-4v1h-7v-1h7zm8 .861v6.524c0 2.392-6.648 9.615-9.811 9.615h-10.189v-24h15.055c-.439.584-.767 1.257-.915 2h-12.14v20h7.362c4.156 0 2.638-6 2.638-6s6 1.65 6-2.457v-5.746c.668.215 1.33.198 2 .064z"
                   fill="currentColor" />
@@ -104,11 +83,7 @@
 
             <!-- Manchester hometown page  -->
             <a href=" https://rabia-avci-hometown-homepage.netlify.app/"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
-                viewBox="0 0 24 24">
+              ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
                   d="M20.021 0c-1.646 0-2.98 1.335-2.98 2.98 0 .652.21 1.256.566 1.746l-3.275 3.274h2.144l2.309-2.309c.376.173.795.269 1.236.269 1.645 0 2.979-1.334 2.979-2.98s-1.334-2.98-2.979-2.98zm0 2.338c-.513 0-.929-.292-.929-.653s.416-.653.929-.653c.512 0 .928.292.928.653s-.417.653-.928.653zm-14.021 10.662h10v1h-10v-1zm10-2h-10v-1h10v1zm-3-4v1h-7v-1h7zm8 .861v6.524c0 2.392-6.648 9.615-9.811 9.615h-10.189v-24h15.055c-.439.584-.767 1.257-.915 2h-12.14v20h7.362c4.156 0 2.638-6 2.638-6s6 1.65 6-2.457v-5.746c.668.215 1.33.198 2 .064z"
                   fill="currentColor" />
@@ -117,11 +92,7 @@
             </a>
             <!-- Alper's Birthday Gift Site  -->
             <a href=" https://rabia-avci-birthday-gift-site.netlify.app/"
-              ><svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="48"
-                height="48"
-                viewBox="0 0 24 24">
+              ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
                   d="M20.021 0c-1.646 0-2.98 1.335-2.98 2.98 0 .652.21 1.256.566 1.746l-3.275 3.274h2.144l2.309-2.309c.376.173.795.269 1.236.269 1.645 0 2.979-1.334 2.979-2.98s-1.334-2.98-2.979-2.98zm0 2.338c-.513 0-.929-.292-.929-.653s.416-.653.929-.653c.512 0 .928.292.928.653s-.417.653-.928.653zm-14.021 10.662h10v1h-10v-1zm10-2h-10v-1h10v1zm-3-4v1h-7v-1h7zm8 .861v6.524c0 2.392-6.648 9.615-9.811 9.615h-10.189v-24h15.055c-.439.584-.767 1.257-.915 2h-12.14v20h7.362c4.156 0 2.638-6 2.638-6s6 1.65 6-2.457v-5.746c.668.215 1.33.198 2 .064z"
                   fill="currentColor" />
@@ -134,10 +105,7 @@
 
       <section id="contact">
         <header>
-          <h2>
-            <span style="font-style: italic">Designed </span>and Built by Rabia
-            Avci
-          </h2>
+          <h2><span style="font-style: italic">Designed </span>and Built by Rabia Avci</h2>
         </header>
       </section>
     </main>
@@ -145,13 +113,7 @@
       <!-- Github link -->
       <h3>
         <a href="https://github.com/RbAvci"
-          ><svg
-            focusable="false"
-            role="presentation"
-            viewbox="0 0 98 96"
-            width="48"
-            height="48"
-            xmlns="http://www.w3.org/2000/svg">
+          ><svg focusable="false" role="presentation" viewbox="0 0 98 96" width="48" height="48" xmlns="http://www.w3.org/2000/svg">
             <path
               fill-rule="evenodd"
               clip-rule="evenodd"
@@ -165,13 +127,7 @@
 
       <h3>
         <a href="https://www.linkedin.com/in/rabia-avci-5231032b/"
-          ><svg
-            focusable="false"
-            role="presentation"
-            xmlns="http://www.w3.org/2000/svg"
-            width="48"
-            height="48"
-            viewBox="0 0 24 24">
+          ><svg focusable="false" role="presentation" xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
             <path
               d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.113-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z "
               fill="currentColor" />
@@ -182,11 +138,7 @@
       <!-- Email link -->
       <h3>
         <a href="mailto:rb.avci@gmail.com"
-          ><svg
-            xmlns="http://www.w3.org/2000/svg"
-            width="48"
-            height="48"
-            viewBox="0 0 24 24">
+          ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
             <path
               d="M12 .02c-6.627 0-12 5.373-12 12s5.373 12 12 12 12-5.373 12-12-5.373-12-12-12zm6.99 6.98l-6.99 5.666-6.991-5.666h13.981zm.01 10h-14v-8.505l7 5.673 7-5.672v8.504z"
               fill="currentColor" />
