--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
         <section id="projects">
           <header><h2>Projects Showcase</h2></header>
           <div class="project-list">
+            <!-- Karma Clone page  -->
+
+            <a href="https://deploy-preview-647--cyf-module-project-html-css.netlify.app/"
+              ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
+                <path
+                  d="M20.021 0c-1.646 0-2.98 1.335-2.98 2.98 0 .652.21 1.256.566 1.746l-3.275 3.274h2.144l2.309-2.309c.376.173.795.269 1.236.269 1.645 0 2.979-1.334 2.979-2.98s-1.334-2.98-2.979-2.98zm0 2.338c-.513 0-.929-.292-.929-.653s.416-.653.929-.653c.512 0 .928.292.928.653s-.417.653-.928.653zm-14.021 10.662h10v1h-10v-1zm10-2h-10v-1h10v1zm-3-4v1h-7v-1h7zm8 .861v6.524c0 2.392-6.648 9.615-9.811 9.615h-10.189v-24h15.055c-.439.584-.767 1.257-.915 2h-12.14v20h7.362c4.156 0 2.638-6 2.638-6s6 1.65 6-2.457v-5.746c.668.215 1.33.198 2 .064z"
+                  fill="currentColor" />
+              </svg>
+              Karma Clone
+            </a>
             <!-- Personal Homepage page  -->
+
             <a href=" https://cyf-personal-homepage-diceroll-commnt.netlify.app/"
               ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
@@ -70,8 +81,8 @@
               </svg>
               Personal Home Page
             </a>
-
             <!-- Wireframe to Web Code  -->
+
             <a href=" https://deploy-preview-111--cyf-module-html-css.netlify.app/wireframe/"
               ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
@@ -82,6 +93,7 @@
             </a>
 
             <!-- Manchester hometown page  -->
+
             <a href=" https://rabia-avci-hometown-homepage.netlify.app/"
               ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
@@ -91,6 +103,7 @@
               Manchester Hometown Page
             </a>
             <!-- Alper's Birthday Gift Site  -->
+
             <a href=" https://rabia-avci-birthday-gift-site.netlify.app/"
               ><svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" viewBox="0 0 24 24">
                 <path
