--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
   </head>
   <body>
     <header>
-      <main class="figure">
-      <h1>Bakhat Begum</h1>
-      <img src="img.jpg" alt="Personal Portfolio" class="my-img">
-      </main>
+       <main class="figure"> 
+    <h1>Bakhat Begum</h1> 
+      <img src="img.jpg" alt="Personal Portfolio" class="my-img"> -->
+      </main> 
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -123,6 +123,6 @@
         <p class="text"><a href="//www.linkedin.com/feed/">//www.linkedin.com/feed/</a></p>
         </section>
     </footer>
-    </footer>
+    
   </body>
 </html>
