--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>My Portfolio</title>
     <meta
       name="description"
-      content="The technical portfolio of trainee name"
+      content="portfolio"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!-- suppress FOUC-->
@@ -38,7 +38,7 @@
   </head>
   <body>
     <header>
-      <h1>My Name</h1>
+      <h1>Rawan Almutairi</h1>
       <nav>
         <ul>
           <li><a href="#about">About Me</a></li>
@@ -51,34 +51,26 @@
       <section id="about">
         <header><h2>About Me</h2></header>
         <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
+         I work as a software developer, and worked on several programming languages.
+          Including Java Script, HTML,CSS,Python. Check my work for more info.
         </p>
       </section>
       <section id="projects">
-        <header><h2>Projects Showcase</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        <header><h2>My Projects</h2></header>
+        <a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/149" target="_blank">control forms</a> |
+        <a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/138/files" target="_blank">Cakes Page</a> |
+        <a href="https://github.com/CodeYourFuture/HTML-CSS-Module-Project/pull/656/files" target="_blank">Karma Clone, Store Page</a> |
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
-        <p>
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nulla nisi
-          excepturi quidem, eum rem doloribus quam aspernatur hic enim eligendi
-          commodi minima ullam necessitatibus, cumque blanditiis, nihil magni
-          amet consectetur?
-        </p>
+        
+          <p>You can reach me at <a href="mailto:almutairi.rawan1@gmail.comm">almutairi.rawan1@gmail.com</a></p>
+        
       </section>
     </main>
     <footer>
       <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
+        <a href="https://github.com/rawan0-0"
           ><svg
             focusable="false"
             role="presentation"
@@ -94,7 +86,7 @@
               fill="currentColor"
             />
           </svg>
-          Read me</a
+          Rawan Almutairi</a
         >
       </h3>
     </footer>
