update OCT Portfolio

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           </article>
           
           <article class="card">
-            <a href="http://127.0.0.1:5500/Wireframe/index.html"><img src="./images/Wireframe.png" alt="wireframe"></a>
+            <a href="http://127.0.0.1:5500/Wireframe/index.html"><img src="./images/Wireframe.png" alt="Wireframe"></a>
             <div class="text-container">
             <a href="http://127.0.0.1:5500/Wireframe/index.html">Wireframe</a> </div> 
           </article>
