--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       html {
         animation: fade-in 1s;
       }
+
       @keyframes fade-in {
         0% {
           opacity: 0;
@@ -40,7 +41,7 @@
     <header>
        <main class="figure"> 
     <h1>Bakhat Begum</h1> 
-      <img src="img.jpg" alt="Personal Portfolio" class="my-img"> -->
+      <img src="img.jpg" alt="Personal Portfolio" class="my-img">
       </main> 
       <nav>
         <ul>
