--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
             
            <article class="modules__block">
             <main class="main">
-          <h1 class="module__head">My deploy modules: </h1>
+          <h1 class="module__head">
+            My deploy modules: </h1>
           <ul>
            <li><a href="https://loquacious-bienenstitch-82f317.netlify.app/">Blackjack-game</a></li>
           <li><a href="https://easy-calculater.netlify.app/">Basic-Calculator</a></li>
