--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </main>
       <footer>
         <div class="footer">
-          <p>&copy; 2023 Zahra.k.b. All Rights Reserved!</p>
+          <p>&copy; 2023 Zahra.k.b. All Rights Reserved.</p>
         </div>
       </footer>
   </body>
