--- a/index.html
+++ b/index.html
@@ -32,7 +32,37 @@
 
       
     </header>
-    <main></main>
+    <main>
+      <section class="cont1">
+        <article class="hay-img">
+        <img src="/HaythemPhoto.jpeg" alt="Haythem's Photo">
+      </article>
+      <article class="hay-about">
+        <p>Experienced Low-Current Systems Estimation, and costing. As an IT Engineer with a demonstrated history of working in the information technology and services industry. Skilled in Information Security Management, Software Development, Team Leadership, Application Development, and Software Cost Estimation. Strong and professional IT background with a Bachelor's degree focused in Computer Science from the University of Technological Sciences.</p>
+
+      </article>
+
+      </section>
+      <section class="cont2">
+        <article class="skills">
+          <ol class="listname">Skills</ol>
+          <li class="listitem">Team Leadership</li>
+          <li class="listitem">Enterprise Resource Planning (ERP)</li>
+          <li class="listitem">Organization Skills</li>
+          <li class="listitem">Problem Solving</li>
+        </article>
+        <article class="projects">
+          <ol class="listname">Projects</ol>
+          <li class="listitem">Implementing Enterprise Resource Planning (ERP) System in Saudi Arabia</li>
+          <li class="listitem">Network Design and Administration for public and private sectors in Sudan</li>
+          <li class="listitem">Accounting System Analysis and Design in Sudan</li>
+        </article>
+
+
+
+      </section>
+      
+    </main>
     <footer></footer>
   </body>
 </html>
