--- a/index.html
+++ b/index.html
@@ -57,10 +57,26 @@
           <li class="listitem">Network Design and Administration for public and private sectors in Sudan</li>
           <li class="listitem">Accounting System Analysis and Design in Sudan</li>
         </article>
+      </section>
+      <section class="experiance">
+        <article>
+        <h2>Work Experience</h2>
+      </article>
+        <article>
+        <li class="listitem">Refugee Support Caseworker - United Kingdom</li>
+        <li class="listitem">Senior Pricing and Estimation Engineer - Saudi Arabia</li>
+          <li class="listitem">Senior Information Technology Engineer - Saudi Arabia</li>
+          <li class="listitem">Information Technology Engineer - Sudan</li>
+          <li class="listitem">Information Technology Analyst - Sudan</li>
+        </article>
+      </section>
 
-
+      <section class="activities">
+        <h2>Voluntary Work</h2>
+        <p>Currently, I am working for the British Red Cross. My role is as a refugee support caseworker. We support people who are forced to flee their homes overseas. We help people find safe and legal routes to new countries and provide essential aid. Our policy and advocacy work helps make sure people seeking protection in the UK are treated fairly and with dignity.</p>
 
       </section>
+
       
     </main>
     <footer></footer>
