--- a/index.html
+++ b/index.html
@@ -76,9 +76,18 @@
         <p>Currently, I am working for the British Red Cross. My role is as a refugee support caseworker. We support people who are forced to flee their homes overseas. We help people find safe and legal routes to new countries and provide essential aid. Our policy and advocacy work helps make sure people seeking protection in the UK are treated fairly and with dignity.</p>
 
       </section>
+      <section class="contact">
+        <article>
+        <h2>My Contact info:</h2>
+      </article>
+        <article>
+        <li class="listitem">Email: haythem00@gmail.com</li>
+        <li class="listitem">Mobile Phone: +447507550930</li>
+        </article>
+      </section>
 
       
     </main>
-    <footer></footer>
+    <footer>This is Haythem's Portfolio. And done by Haythem.</footer>
   </body>
 </html>
