--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
           <li class="listitem">
             <a
               class="listitem"
-              href="https://deploy-preview-164--cyf-module-html-css.netlify.app"
+              href="https://deploy-preview-164--cyf-module-html-css.netlify.app/cakes-co/"
               >Cake Webpage</a
             >
           </li>
