--- a/index.html
+++ b/index.html
@@ -43,13 +43,17 @@
           to continuous learning, I plan to leverage my experience as a refugee
           case worker to excel in the tech sector. <br /><br />
         </p>
-        <h2 class="c-section__title">My Interests</h2>
-        <ul class="c-section__list">
-          <li>Programming</li>
-          <li>Web Development</li>
-          <li>Machine Learning</li>
-          <li>Artificial Intelligence</li>
+        <h2 class="c-section__title">My projects</h2>
+        <ul>
+          <li><a href="https://deploy-preview-469--cyf-bfr.netlify.app/" target="_blank">Bikes for Refugees</a></li>
+          <li><a href="https://deploy-preview-108--cyf-module-html-css.netlify.app/wireframe/" target="_blank">Wireframe to Web Code</a></li>
+          <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/level-2/store" target="_blank">Store Page</a></li>
+          <ul>
+            <li><a href="https://deploy-preview-130--cyf-module-html-css.netlify.app/cakes-co/" target="_blank">Cakes Co</a></li>
+          </ul>
+          <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/" target="_blank">Karma Project</a></li>
         </ul>
+        
       </section>
     </main>
 
