--- a/projects.html
+++ b/projects.html
@@ -22,14 +22,31 @@
     <main>
    <section>
   <h1 class="c-section__title">List of my Projects</h1>
-  <ul class="c-section__list">
-    <li><a href="https://deploy-preview-469--cyf-bfr.netlify.app/" target="_blank">Bikes for Refugees</a></li>
-    <li><a href="https://deploy-preview-108--cyf-module-html-css.netlify.app/wireframe/" target="_blank">Discovering Git: Wireframe to Web Code</a></li>
-    <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/level-2/store" target="_blank">Store Page</a></li>
-    <li><a href="https://deploy-preview-130--cyf-module-html-css.netlify.app/cakes-co/" target="_blank">Discovering Git: Cakes Co</a></li>
-    <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/" target="_blank">Karma Project</a></li>
-  </ul>
-</section>
+  <section class="c-section">
+    <div class="c-card" id="card1">
+      <h2 class="c-section__title">Website Links</h2>
+      <ul>
+        <li><a href="https://deploy-preview-469--cyf-bfr.netlify.app/" target="_blank">Bikes for Refugees</a></li>
+        <li><a href="https://deploy-preview-108--cyf-module-html-css.netlify.app/wireframe/" target="_blank">Wireframe to Web Code</a></li>
+        <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/level-2/store" target="_blank">Store Page</a></li>
+          <li><a href="https://deploy-preview-130--cyf-module-html-css.netlify.app/cakes-co/" target="_blank">Cakes Co</a></li>
+        <li><a href="https://deploy-preview-643--cyf-module-project-html-css.netlify.app/" target="_blank">Karma Project</a></li>
+        <li><a href="https://deploy-preview-178--cyf-module-html-css.netlify.app/multipage-clone" target="_blank">Multipage Clone</a></li>
+      </ul>
+    </div>
+
+    <div class="c-card" id="card2">
+      <h2 class="c-section__title">GitHub Links</h2>
+      <ul>
+        <li><a href="https://github.com/CodeYourFuture/bikes-for-refugees/pull/469" target="_blank">Bikes for Refugees</a></li>
+        <li><a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/108" target="_blank">Wireframe to Web Code</a></li>
+        <li><a href="https:https://github.com/CodeYourFuture/HTML-CSS-Module-Project/pull/643" target="_blank">Store Page</a></li>
+          <li><a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/130" target="_blank">Cakes Co</a></li>
+        <li><a href="https://github.com/CodeYourFuture/HTML-CSS-Module-Project/pull/643" target="_blank">Karma Project</a></li>
+        <li><a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/178" target="_blank">Multipage Clone</a></li>
+      </ul>
+    </div>
+  </section>
 
 
 
