project links included

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <ul>
             <li><a href="https://github.com/CodeYourFuture/bikes-for-refugees/pull/469" target="_blank">Bikes for Refugees</a></li>
             <li><a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/108" target="_blank">Wireframe to Web Code</a></li>
-            <li><a href="https:https://github.com/CodeYourFuture/HTML-CSS-Module-Project/pull/643" target="_blank">Store Page</a></li>
+            <li><a href="https://github.com/CodeYourFuture/HTML-CSS-Module-Project/pull/643" target="_blank">Store Page</a></li>
               <li><a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/130" target="_blank">Cakes Co</a></li>
             <li><a href="https://github.com/CodeYourFuture/HTML-CSS-Module-Project/pull/643" target="_blank">Karma Project</a></li>
             <li><a href="https://github.com/CodeYourFuture/Module-HTML-CSS/pull/178" target="_blank">Multipage Clone</a></li>
