index footer Full name added!

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </main>
 
     <footer class="c-site-footer">
-      <p class="c-site-footer__text">&copy; 2023 Fathi. All rights reserved.</p>
+      <p class="c-site-footer__text">&copy; 2023 Fathi Kahin. All rights reserved.</p>
     </footer>
   </body>
 </html>
