--- a/index.html
+++ b/index.html
@@ -7,35 +7,13 @@
       rel="stylesheet"
       href="https://unpkg.com/jest-lite@1.0.0-alpha.4/dist/prettify.css"
     />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="/dist/style.css" />
   </head>
-  <body>
-    <!-- partial:index.partial.html -->
-    <!DOCTYPE html>
-    <html lang="en">
-      <head>
-        <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="styles.css" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-          href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;600;700;800&family=Signika+Negative:wght@300;400;700&display=swap"
-          rel="stylesheet"
-        />
-        <link
-          rel="stylesheet"
-          href="https://kit.fontawesome.com/ca13de009b.css"
-          crossorigin="anonymous"
-        />
-        <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        <title>Adniya Yousaf</title>
-      </head>
       <body class="bg1">
         <!-- Header -->
         <header class="c-site-header center color3">
-          <div class="nav">
+      
+          <div class=" nav">
             <!-- Nav -->
             <nav aria-label="Main Site Links.">
               <svg
@@ -154,21 +132,6 @@
               </div>
             </div>
           </section>
-          <section class="biography-section">
-            <div class="bio-img" data-aos="fade-left"></div>
-            <div data-aos="zoom-out" data-aos-duration="1500">
-              <h5 class="bio-heading color4 fs-38px">BIOGRAPHY</h5>
-              <p class="bio-text color2">
-                Adniya Yousaf was born in Pakistan and trilingual in Urdu,
-                punjabi and English. Adniya grew up in Sargodha city and move to
-                Rabwah, a small town of Punjab at age 20. At University of
-                Sargodha, she got her Bachelor's degree in Computer Science.<br />
-                <br />
-                In her free time, she enjoys reading books, journaling, singing,
-                practicing photography, traveling and playing chess.
-              </p>
-            </div>
-          </section>
           <section class="contact-section color2" data-aos="fade-up">
             <form class="form" action="get">
               <div class="input-label">
@@ -236,7 +199,6 @@
             ></a>
           </div>
         </footer>
-      </body>
       <script
         src="https://kit.fontawesome.com/ca13de009b.js"
         crossorigin="anonymous"
@@ -254,19 +216,7 @@
           msg.style.display = "block";
         }
       </script>
-    </html>
+  
 
-    <!-- Your test console.
-Don't delete!-->
-    <aside
-      id="tests"
-      aria-label="Test Readout."
-      aria-live="polite"
-      style="overflow: auto"
-    ></aside>
-    <!-- partial -->
-    <script src="https://unpkg.com/jest-lite@1.0.0-alpha.4/dist/core.js"></script>
-    <script src="https://unpkg.com/jest-lite@1.0.0-alpha.4/dist/prettify.js"></script>
-    <script src="./script.js"></script>
   </body>
 </html>
