contact mini hidden feature implemented when the user reach the bottom of the page

--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png" />
 </head>
 
-<script type="text/javascript" src="scripts/goToSection.js"></script>
+<script type="module" src="scripts/goToSection.js"></script>
+<script type="module" src="scripts/hideMiniContact.js"></script>
 
 <body>
   <header>
@@ -144,7 +145,7 @@
     </section>
   </main>
   <footer>
-    <section id="contact-mini">
+    <section id="contact-mini" class="contact-mini-fixed">
       <a href="https://github.com/PERicci" target="_blank" rel="noopener noreferrer"
         aria-label="Pedro's GitHub Profile"><svg xmlns="http://www.w3.org/2000/svg"
           viewBox="0 0 448 512"><!--! Font Awesome Pro 6.4.2 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2023 Fonticons, Inc. -->
