Mufidied for testint

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       </div>
     </div>
     <!-- showcase close -->
-
+    <!-- we are testing -->
     <!-- about open -->
     <div id="about">
       <div class="container-2">
