added new content

--- a/index.html
+++ b/index.html
@@ -68,14 +68,15 @@
           <h2>Bakhat</h2>
           <h3>A student in CodeYourFuture</h3>
           <p>
-            I am currently studying software development bootcamp at
+            I am currently studying software development boot camp at
             CodeYourFuture. I am a hardworking student who is committed to
             pursuing my goals in becoming a software developer and advancing my
             career in this field. I have one year of beginner experience working
             with programming languages such as HTML, CSS, JavaScript, and
-            Python. I am looking forward to utilising my skills and passion in
+            Python. I am looking forward to utilizing my skills and passion in
             the technology field.
           </p>
+          <p>I enjoy learning how to code.</p>
 
           <div class="social-btn">
             <ul>
