Updated case study

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
           <a href="https://app.netlify.com/teams/areebsattar/sites"
             target="_blank">Click here!</a>
         </p>
+        <h3>Case Study (Cakes-Co Project)</h3>
+        <p>This was one of the really good projects which has taught us how to think mobile first as most of the world is accessing the internet on the 
+          mobile phones and it is getting more important to provide a good experience when using the mobile phones. It was a good practice to start with mobile 
+          and then build the website for the rest of the devices like tablets and computers using media queries. This project also helped me understand the concept 
+          of grids in a better way and how they can really help with the appearance of the webpage. Overall it was a great learning opportunity to utilize the new 
+          concepts we learned.
+        </p>
       </section>
       <section id="contact">
         <header><h2>Contact me</h2></header>
