--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     </main>
     <footer>
       <h3>
-        <a href="https://github.com/CodeYourFuture/Portfolio"
+        <a href="https://github.com/areebsattar"
           ><svg
             focusable="false"
             role="presentation"
@@ -110,7 +110,7 @@
               fill="currentColor"
             />
           </svg>
-          Read me</a
+          GitHub</a
         >
       </h3>
     </footer>
