--- a/index.html
+++ b/index.html
@@ -1,118 +1,106 @@
 <!DOCTYPE html>
 <html lang="en-gb">
-  <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>My Portfolio</title>
-    <meta
-      name="description"
-      content="The technical portfolio of trainee name"
-    />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- suppress FOUC-->
-    <style>
-      html {
-        animation: fade-in 1s;
+
+<head>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title>My Portfolio</title>
+  <meta name="description" content="The technical portfolio of trainee name" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <!-- suppress FOUC-->
+  <style>
+    html {
+      animation: fade-in 1s;
+    }
+
+    @keyframes fade-in {
+      0% {
+        opacity: 0;
       }
-      @keyframes fade-in {
-        0% {
-          opacity: 0;
-        }
-        100% {
-          opacity: 1;
-        }
+
+      100% {
+        opacity: 1;
       }
-    </style>
-    <link
-      rel="stylesheet"
-      href="style.css"
-      media="print"
-      onload="this.media='all'"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <header>
-      <h1>Areeb Sattar</h1>
-      <nav>
-        <ul>
-          <li><a href="#about">About Me</a></li>
-          <li><a href="#projects">Projects</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <main tabindex="0">
-      <section id="about">
-        <header><h2>About Me</h2></header>
-        <p>
-          My name is Areeb, I am from Multan, Pakistan and I have completed my
-          Civil Engineering in Pakistan in 2018. I have always been keen to
-          learn software development and I believe the opportunity by CYF will
-          help me do that and develop a career in software development. I love
-          to travel and socialize. Photography is also one of my interests.
-        </p>
-      </section>
-      <section id="projects">
-        <header><h2>Projects Showcase</h2></header>
-        <p>You can find my projects here</p>
-        <p>
-          Github Repos
-          <a
-            href="https://github.com/areebsattar?tab=repositories"
-            target="_blank">Click here!</a>
-          <p>Netlify
-          <a href="https://app.netlify.com/teams/areebsattar/sites"
-            target="_blank">Click here!</a>
-        </p>
-        <h3>Case Study (Cakes-Co Project)</h3>
-        <p>This was one of the really good projects which has taught us how to think mobile first as most of the world is accessing the internet on the 
-          mobile phones and it is getting more important to provide a good experience when using the mobile phones. It was a good practice to start with mobile 
-          and then build the website for the rest of the devices like tablets and computers using media queries. This project also helped me understand the concept 
-          of grids in a better way and how they can really help with the appearance of the webpage. Overall it was a great learning opportunity to utilize the new 
-          concepts we learned.
-        </p>
-      </section>
-      <section id="contact">
-        <header><h2>Contact me</h2></header>
-        <p>
-          Email:
-          <a href="mailto: areebsattar1@gmail.com"> areebsattar1@gmail.com</a>
-        </p>
-        <p>
-          LinkedIn:
-          <a href="https://www.linkedin.com/in/areeb-sattar/" target="_blank"
-            >Areeb Sattar</a
-          >
-        </p>
-      </section>
-    </main>
-    <footer>
-      <h3>
-        <a href="https://github.com/areebsattar"
-          ><svg
-            focusable="false"
-            role="presentation"
-            viewbox="0 0 98 96"
-            width="48"
-            height="48"
-            xmlns="http://www.w3.org/2000/svg"
-          >
-            <path
-              fill-rule="evenodd"
-              clip-rule="evenodd"
-              d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
-              fill="currentColor"
-            />
-          </svg>
-          GitHub</a
-        >
-      </h3>
-    </footer>
-  </body>
+    }
+  </style>
+  <link rel="stylesheet" href="style.css" media="print" onload="this.media='all'" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;800&display=swap" rel="stylesheet" />
+</head>
+
+<body>
+  <header>
+    <h1>Areeb Sattar</h1>
+    <nav>
+      <ul>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main tabindex="0">
+    <section id="about">
+      <header>
+        <h2>About Me</h2>
+      </header>
+      <p>
+        My name is Areeb, I am from Multan, Pakistan and I have completed my
+        Civil Engineering in Pakistan in 2018. I have always been keen to
+        learn software development and I believe the opportunity by CYF will
+        help me do that and develop a career in software development. I love
+        to travel and socialize. Photography is also one of my interests.
+      </p>
+    </section>
+    <section id="projects">
+      <header>
+        <h2>Projects Showcase</h2>
+      </header>
+      <p>You can find my projects here</p>
+      <p>
+        Github Repos
+        <a href="https://github.com/areebsattar?tab=repositories" target="_blank">Click here!</a>
+      <p>Netlify
+        <a href="https://app.netlify.com/teams/areebsattar/sites" target="_blank">Click here!</a>
+      </p>
+      <h3>Case Study (Cakes-Co Project)</h3>
+      <p>This was one of the really good projects which has taught us how to think mobile first as most of the world is
+        accessing the internet on the
+        mobile phones and it is getting more important to provide a good experience when using the mobile phones. It was
+        a good practice to start with mobile
+        and then build the website for the rest of the devices like tablets and computers using media queries. This
+        project also helped me understand the concept
+        of grids in a better way and how they can really help with the appearance of the webpage. Overall it was a great
+        learning opportunity to utilize the new
+        concepts we learned.
+      </p>
+    </section>
+    <section id="contact">
+      <header>
+        <h2>Contact me</h2>
+      </header>
+      <p>
+        Email:
+        <a href="mailto: areebsattar1@gmail.com"> areebsattar1@gmail.com</a>
+      </p>
+      <p>
+        LinkedIn:
+        <a href="https://www.linkedin.com/in/areeb-sattar/" target="_blank">Areeb Sattar</a>
+      </p>
+    </section>
+  </main>
+  <footer>
+    <h3>
+      <a href="https://github.com/areebsattar" target="_blank"><svg focusable="false" role="presentation"
+          viewbox="0 0 98 96" width="48" height="48" xmlns="http://www.w3.org/2000/svg">
+          <path fill-rule="evenodd" clip-rule="evenodd"
+            d="M48.854 0C21.839 0 0 22 0 49.217c0 21.756 13.993 40.172 33.405 46.69 2.427.49 3.316-1.059 3.316-2.362 0-1.141-.08-5.052-.08-9.127-13.59 2.934-16.42-5.867-16.42-5.867-2.184-5.704-5.42-7.17-5.42-7.17-4.448-3.015.324-3.015.324-3.015 4.934.326 7.523 5.052 7.523 5.052 4.367 7.496 11.404 5.378 14.235 4.074.404-3.178 1.699-5.378 3.074-6.6-10.839-1.141-22.243-5.378-22.243-24.283 0-5.378 1.94-9.778 5.014-13.2-.485-1.222-2.184-6.275.486-13.038 0 0 4.125-1.304 13.426 5.052a46.97 46.97 0 0 1 12.214-1.63c4.125 0 8.33.571 12.213 1.63 9.302-6.356 13.427-5.052 13.427-5.052 2.67 6.763.97 11.816.485 13.038 3.155 3.422 5.015 7.822 5.015 13.2 0 18.905-11.404 23.06-22.324 24.283 1.78 1.548 3.316 4.481 3.316 9.126 0 6.6-.08 11.897-.08 13.526 0 1.304.89 2.853 3.316 2.364 19.412-6.52 33.405-24.935 33.405-46.691C97.707 22 75.788 0 48.854 0z"
+            fill="currentColor" />
+        </svg>
+        GitHub</a>
+    </h3>
+  </footer>
+</body>
+
 </html>
